WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28834
Compiling ScriptController failed because localStorage isn't defined.
https://bugs.webkit.org/show_bug.cgi?id=28834
Summary
Compiling ScriptController failed because localStorage isn't defined.
Maxime Simon
Reported
2009-08-30 07:24:01 PDT
Since
r47846
, WebKit build fails on systems which didn't enable DOM_STORAGE. So I would suggest to add #if ENABLE(DOM_STORAGE) … #endif around the code introduced by this revision. I think I can produce a patch for this, but should I also add this preprocessing around the v8 code?
Attachments
Patch v1
(2.09 KB, patch)
2009-08-30 07:50 PDT
,
Maxime Simon
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Maxime Simon
Comment 1
2009-08-30 07:50:08 PDT
Created
attachment 38791
[details]
Patch v1
Eric Seidel (no email)
Comment 2
2009-08-31 03:05:39 PDT
Comment on
attachment 38791
[details]
Patch v1 I'm entertained that you fixed it for both ScriptControllers. :) Thanks!
Eric Seidel (no email)
Comment 3
2009-08-31 03:19:01 PDT
Comment on
attachment 38791
[details]
Patch v1 Clearing flags on attachment: 38791 Committed
r47887
: <
http://trac.webkit.org/changeset/47887
>
Eric Seidel (no email)
Comment 4
2009-08-31 03:19:04 PDT
All reviewed patches have been landed. Closing bug.
Jeremy Orlow
Comment 5
2009-09-01 19:06:49 PDT
Doh! Sorry about that. :-(
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug