2009-08-31  Maxime Simon  <simon.maxime@gmail.com>

Reviewed by Eric Seidel.

        Build fix for platforms which don't enable DOM_STORAGE.
        https://bugs.webkit.org/show_bug.cgi?id=28834

        * bindings/js/ScriptController.cpp:
        (WebCore::ScriptController::evaluate):
        * bindings/v8/ScriptController.cpp:
        (WebCore::ScriptController::evaluate):


Canonical link: https://commits.webkit.org/39463@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47887 268f45cc-cd09-0410-ab3c-d52691b4dbfc