WebCore/bindings/js/ScriptController.cpp
@@ -119,11 +119,13 @@ ScriptValue ScriptController::evaluate(const ScriptSourceCode& sourceCode)
     // so we start the keep alive timer here.
     m_frame->keepAlive();
 
+#if ENABLE(DOM_STORAGE)
     // Release any localStorage locks we may still have.
     Page* page = m_frame->page();
     StorageNamespace* localStorage = page ? page->group().localStorage() : 0;
     if (localStorage)
         localStorage->unlock();
+#endif
 
     if (comp.complType() == Normal || comp.complType() == ReturnValue) {
         m_sourceURL = savedSourceURL;
